--- a/src/pages/style/Home.css
+++ b/src/pages/style/Home.css
@@ -1,11 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Lato&family=Poppins:wght@300;400&family=Roboto+Slab:wght@400;700&family=Work+Sans:ital,wght@1,500&family=Ysabeau+Office:ital,wght@0,1;0,100;0,200;1,200;1,400;1,500&display=swap');
 
-/* .home-page-textf{
-    font-size: 17px;
+.home-page-textf{
+    font-size: 15px;
     font-family: 'Poppins', sans-serif;
       
-} */
+}
 
 /* 
 .home-container-page{
@@ -56,7 +56,7 @@
     box-sizing: border-box;
     margin: 0 auto;
     max-width: 1200px;
-  }
+}
   
   .home-page-textf {
     text-align: justify;
@@ -103,6 +103,7 @@
  justify-content: end;
   margin-bottom: 10px;
 } */
+
 /* CARD HOVER */
 .card-media:hover {
   transform: scale(1.1); 
@@ -122,14 +123,12 @@
   @media (max-width: 768px) {
    
     .home-page-textf {
-      /* text-align: left; */
       text-align: justify;
       
     }
   
     .home-page-textf h1 {
       font-size: 2rem;
-      /* line-height: 1.3; */
     }
   }
   @media (max-width: 600px) {
