--- a/src/pages/style/Menu.css
+++ b/src/pages/style/Menu.css
@@ -16,12 +16,13 @@
     flex-direction: column;
     height: 100%;
     transition: height 0.5s ease 0.9s; 
-  border-radius: 8px;
+    border-radius: 8px;
+    
   }
   
 .menucard:hover {
     transform: scaleY(1.05); 
-    box-shadow: 10px 0px 10px rgba(39, 191, 8, 0.3); 
+    box-shadow: 10px 0px 10px rgba(7, 46, 145, 0.3); 
   } 
   
 
@@ -29,9 +30,10 @@
  
     display: flex;
     flex-direction: column;
-    /* padding: 16px;
-    max-height: 300px; 
-    overflow: auto;  */
-  }
+   
+  } 
   
 
+ /* .menucardaction{
+  background-color: aquamarine;
+ } */
