--- a/src/pages/style/ContactUs.css
+++ b/src/pages/style/ContactUs.css
@@ -12,7 +12,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f1eee9; 
+  background-color: #e6e6fa;
+  
 }
 .formmain{
     background-color: #e78282;
