--- a/src/pages/style/Ir15t.css
+++ b/src/pages/style/Ir15t.css
@@ -8,7 +8,6 @@
 }
 
 
-
   /* AGAIN */
 
 .home-container-page {
@@ -40,9 +39,6 @@
     align-items: center;
     
 }
-h1{
-  color:crimson;
-}
 /* YourComponent.css */
 
 /* Card styles */
@@ -62,11 +58,7 @@ h1{
   /* Adjust image height */
   object-fit: cover; /* Ensure the image covers the entire container */
 }
-/* .home-page-btn{
-  display: flex;
- justify-content: end;
-  margin-bottom: 10px;
-} */
+
 
 /* CARD HOVER */
 .card-media:hover {
@@ -78,7 +70,7 @@ h1{
 
 .card:hover {
   transform: scaleY(1.05); 
-  box-shadow: 10px 10px 10px 10px rgba(147, 86, 86, 0.3); 
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 } 
 
 
@@ -97,7 +89,7 @@ h1{
   }
   @media (max-width: 600px) {
     .card-media {
-      height: 200px; /* Adjust image height for smaller screens */
+      height: 200px; 
     }
   }
   
