--- a/src/pages/style/ContactUs.css
+++ b/src/pages/style/ContactUs.css
@@ -15,13 +15,33 @@ body {
   background-color: #e6e6fa;
   
 }
+
+.forms input,
+.forms textarea {
+  background-color: white;
+  color: black;
+  border-radius: 8px; 
+  /* border: 1px solid #f615dc;  */
+  /* padding: 8px;  */
+  /* margin-bottom: 10px; */
+}
+
+.message{
+  background-color: white;
+  color: black;
+   border-radius: 8px; 
+  border: 1px solid #000000; 
+  
+}
 .formmain{
-    background-color: #e78282;
+    /* background-color: #1D2B53; */
+    background-color:rgb(36, 157, 66);
     height: 100%;
     width: 100%;
     max-width: 600px; 
     padding: 30px;
     margin-bottom:5%;   
+    border-radius: 8px; 
 }
 
 /* .forms{
