--- a/src/pages/style/AboutUs.css
+++ b/src/pages/style/AboutUs.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 
 .aboutus-page-main{
     margin:5%;
     justify-content: center;
     align-items: center;
+    text-align: justify;
+    font-family: "Libre Franklin", sans-serif;
     /* background-size: cover;
     background-repeat: no-repeat;
     background-position: center; */
@@ -11,8 +14,9 @@
 
 .aboutus-page-heading{
     margin-top: 5px;
-    font-weight: 700;
-    background-color: rgb(242, 231, 182);
+    font-weight: 900;
+    color: orangered;
+    /* background-color: orange; */
 }
 .abt-firsthead{
     width: 100.5vw;
