--- a/src/pages/style/Home.css
+++ b/src/pages/style/Home.css
@@ -7,10 +7,6 @@
       
 }
 
-
-
-  /* AGAIN */
-
 .home-container-page {
     width: 100%;
     padding: 20px;
@@ -20,12 +16,14 @@
 }
   
   .home-page-textf {
+    margin-top: 20px;
     text-align: justify;
   }
   
   .home-page-textf h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+    /* color: tomato; */
   }
   
   .home-span {
@@ -58,15 +56,8 @@ h1{
 }
 
 .card-media {
-  /* height: 150px;  */
-  /* Adjust image height */
   object-fit: cover; /* Ensure the image covers the entire container */
 }
-/* .home-page-btn{
-  display: flex;
- justify-content: end;
-  margin-bottom: 10px;
-} */
 
 /* CARD HOVER */
 .card-media:hover {
@@ -78,7 +69,7 @@ h1{
 
 .card:hover {
   transform: scaleY(1.05); 
-  box-shadow: 10px 10px 10px 10px rgba(226, 214, 75, 0.3); 
+  box-shadow: 10px 0px 10px 0px rgba(29, 29, 29,0.7); 
 } 
 
 
@@ -87,11 +78,13 @@ h1{
   @media (max-width: 768px) {
    
     .home-page-textf {
+     
       text-align: justify;
       
     }
   
     .home-page-textf h1 {
+      margin-top: 50%;
       font-size: 2rem;
     }
   }
