added two buttons in card

--- a/src/pages/style/Navbar.css
+++ b/src/pages/style/Navbar.css
@@ -12,13 +12,6 @@
   font-family: 'Work Sans', sans-serif;
   font-family: 'Ysabeau Office', sans-serif; */
 
-<<<<<<< HEAD
-
-=======
- .navbar-toggler{
-  margin-right: 10px;
- }
->>>>>>> rupam
 .navbarnam{
   font-size: 18px; 
   font-family: "Libre Franklin", sans-serif;
@@ -27,13 +20,6 @@
   font-style: normal;
   
 }
-<<<<<<< HEAD
-=======
-
-.navbar-nav{
-  padding-left: 30px;
-}
->>>>>>> rupam
 .navbar-top-company-name{ 
 
   font-family: "Libre Franklin", sans-serif;
@@ -41,7 +27,7 @@
   font-weight:900;
   font-size: 2rem;
   font-style: normal;
-  color: orangered;
+  color: rgb(226, 87, 17);
    
 }
 .icon {
