--- a/src/pages/style/ContactUs.css
+++ b/src/pages/style/ContactUs.css
@@ -13,9 +13,9 @@ body {
   margin: 0;
   padding: 0;
   /* background-color: rgb(116, 217, 221); */
-  background-color: #e6e6fa;
+  /* background-color: #e6e6fa; */
   /* background-color: rgb(210, 200, 200); */
-  /* background-color: #FDF0D1; */
+  background-color: #FDF0D1;
   
 }
 
@@ -51,11 +51,7 @@ body {
  margin-top: 20px;
 } */
 
-.form-heading {
-  /* margin-bottom: 20px; 
-  text-align: center; 
-  font-size: 3rem; */
-}
+
 
 .formspan{
   color: red;
