--- a/src/pages/style/Home.css
+++ b/src/pages/style/Home.css
@@ -80,7 +80,7 @@ h1{
       text-align: justify;
       
     }
-  
+ 
     .home-page-textf h1 {
       margin-top: 50%;
       font-size: 2rem;
@@ -88,7 +88,7 @@ h1{
   }
   @media (max-width: 600px) {
     .card-media {
-      height: 200px; /* Adjust image height for smaller screens */
+      height: 200px; 
     }
   }
   
